# window-switcher

./: .gitignore  AGENT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  scratch  scratch.rs  test_glib.rs  test_listener.rs  test_socket  test_socket.rs
.github/: FUNDING.yml
.github/workflows/: release.yml  rust.yml
docs_tutorial/: 01-architecture-concept.md  02-environment-setup.md  03-implementation-guide.md  04-learning-assessment.md  05-glossary.md  06-native-snapshot-daemon.md  07-garbage-collection.md  getting-started.md
packaging/: PKGBUILD
src/: config.rs  main.rs  test_client.rs  test_main.rs
src/backend/: hyprctl.rs  image_processor.rs  mod.rs  screencopy.rs
src/ui/: css.rs  input.rs  mod.rs
tests/: test_active.rs  test_json.rs
