[package]
name = "window-switcher"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
gtk4 = "0.9"
gtk4-layer-shell = "0.4"
hyprland = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
memmap2 = "0.9"
image = "0.24"
libc = "0.2"
